# xpu-smi

./: README.md  badge.json  pyproject.toml  test_parsing.py  test_xpu_smi_standalone.py  utils.py
.github/workflows/: release.yml
src/xpu_smi/: __init__.py  __main__.py  metrics.py  monitor.py  probe.py
tests/: badge.json
